--- a/msvc-products/src/main/resources/application.properties
+++ b/msvc-products/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=msvc-products
 server.port=8001
 spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud
 spring.datasource.username=root
-spring.datasource.password=K4TTYY2023
+spring.datasource.password=katty2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
