--- a/msvc-items/src/main/resources/application.properties
+++ b/msvc-items/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=msvc-items
 server.port=8002
 
-spring.cloud.discovery.client.simple.local.instances.msvc-products[0].uri= http://localhost:8001
-
-spring.cloud.discovery.client.simple.local.instances.msvc-products[1].uri= http://localhost:9001
+spring.cloud.discovery.client.simple.instances.msvc-products[0].uri=http://localhost:8001
+spring.cloud.discovery.client.simple.instances.msvc-products[1].uri=http://localhost:9001
