--- a/msvc-items/src/main/resources/application.properties
+++ b/msvc-items/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+# Nombre y puerto de este microservicio
 spring.application.name=msvc-items
 server.port=8002
 
-spring.cloud.discovery.client.simple.instances.msvc-products[0].uri=http://localhost:8001
-spring.cloud.discovery.client.simple.instances.msvc-products[1].uri=http://localhost:9001
+# URLs de instancias del microservicio que vamos a consumir
+#Se comenta porque ahora usamos Eureka
+#spring.cloud.discovery.client.simple.instances.msvc-products[0].uri=http://localhost:8001
+#spring.cloud.discovery.client.simple.instances.msvc-products[1].uri=http://localhost:9001
+
+# Propiedad personalizada que usa Feign
+config.baseurl.endpoint.msvc-products=http://msvc-products
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
