--- a/msvc-products/src/main/resources/application.properties
+++ b/msvc-products/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+
+#Esto le indica a CRUDRepository la ruta de la base de datos y las credenciales
+#para conectarse a ella
+#También configura el puerto del servidor y el nombre de la aplicación
+#En caso de despliegue en la nube, estos valores pueden ser gestionados por el entorno
+#de la nube, pero para desarrollo local los definimos aquí.
+
 spring.application.name=msvc-products
 server.port=8001
 spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud
@@ -5,3 +12,5 @@ spring.datasource.username=root
 spring.datasource.password=katty2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
