--- a/msvc-products/src/main/resources/application.properties
+++ b/msvc-products/src/main/resources/application.properties
@@ -6,10 +6,11 @@
 #de la nube, pero para desarrollo local los definimos aquí.
 
 spring.application.name=msvc-products
-server.port=8001
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${random.value}
 spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud
 spring.datasource.username=root
-spring.datasource.password=katty2023
+spring.datasource.password=K4TTYY2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
